Moved Fluent API from test to src. Also removed beginComplex() and endComplex() methods